// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModelHandler applies anchor commit correctly 1`] = `
{
  "anchorProof": {
    "chainId": "fakechain:123",
  },
  "anchorStatus": 3,
  "content": {
    "accountRelation": {
      "type": "list",
    },
    "name": "MyModel",
    "schema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "additionalProperties": false,
      "properties": {
        "stringPropName": {
          "maxLength": 80,
          "type": "string",
        },
      },
      "required": [
        "stringPropName",
      ],
      "type": "object",
    },
    "version": "1.0",
  },
  "log": [
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "timestamp": 1615799679,
      "type": 0,
    },
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts66jqcuam7bmye2pb54adnrtccjlsu",
      },
      "timestamp": 1615799679,
      "type": 2,
    },
  ],
  "metadata": {
    "controllers": [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": {
        "/": "bafyxccyabfug233emvwc25rr",
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 4,
    },
  },
  "signature": 2,
  "type": 2,
}
`;

exports[`ModelHandler applies commit made using an old key if it is applied within the revocation period 1`] = `
{
  "anchorStatus": 0,
  "content": {
    "accountRelation": {
      "type": "list",
    },
    "name": "MyModel",
    "schema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "additionalProperties": false,
      "properties": {
        "stringPropName": {
          "maxLength": 80,
          "type": "string",
        },
      },
      "required": [
        "stringPropName",
      ],
      "type": "object",
    },
    "version": "1.0",
  },
  "log": [
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "timestamp": 1647037687,
      "type": 0,
    },
  ],
  "metadata": {
    "controllers": [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": {
        "/": "bafyxccyabfug233emvwc25rr",
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 4,
    },
  },
  "signature": 2,
  "type": 2,
}
`;

exports[`ModelHandler applies genesis commit correctly 1`] = `
{
  "anchorStatus": 0,
  "content": {
    "accountRelation": {
      "type": "list",
    },
    "name": "MyModel",
    "schema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "additionalProperties": false,
      "properties": {
        "stringPropName": {
          "maxLength": 80,
          "type": "string",
        },
      },
      "required": [
        "stringPropName",
      ],
      "type": "object",
    },
    "version": "1.0",
  },
  "log": [
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 0,
    },
  ],
  "metadata": {
    "controllers": [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": {
        "/": "bafyxccyabfug233emvwc25rr",
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 4,
    },
  },
  "signature": 2,
  "type": 2,
}
`;

exports[`ModelHandler applies genesis commits with views properties correctly 1`] = `
{
  "anchorStatus": 0,
  "content": {
    "accountRelation": {
      "type": "list",
    },
    "name": "MyModel",
    "schema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "additionalProperties": false,
      "properties": {
        "stringPropName": {
          "maxLength": 80,
          "type": "string",
        },
      },
      "required": [
        "stringPropName",
      ],
      "type": "object",
    },
    "version": "1.0",
    "views": {
      "owner": {
        "type": "documentAccount",
      },
    },
  },
  "log": [
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 0,
    },
  ],
  "metadata": {
    "controllers": [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": {
        "/": "bafyxccyabfug233emvwc25rr",
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 4,
    },
  },
  "signature": 2,
  "type": 2,
}
`;
